name:                xxb
version:             0.1.0.0
synopsis:            A fancy/silly xxd substitute
description:
  An xxd substitute, for making hexdumps of files and restoring them, with fancy features such as:
  .
  * Ability to produce colored output
  .
  * Different methods for displaying bytes as one or two characters on the right-side column of the hexdump
  .
  * Speed, using (possibly gratuitous) bytewise pointer magic. When colored output is disabled, it runs faster than xxd on my computer!
  .
  Although xxb outputs the byte positions just like xxd, it ignores the byte positions when reversing a file, making it much easier to insert, delete, and rearrange bytes in a hexdump. When I've used xxb, I've never wished for it to respect the old byte positions.
license:             MIT
license-file:        LICENSE
author:              Brian Chen
maintainer:          brian.chxn@gmail.com
category:            Text
build-type:          Simple

cabal-version:       >=1.10

executable xxb
  ghc-options:         -O
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5, bytestring >= 0.10.4, text
  default-language:    Haskell2010
